fix text overflow on hero

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,11 @@
     }
   }
 }
+
+.heroText {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 6; /* number of lines to show */
+  line-clamp: 6;
+  -webkit-box-orient: vertical;
+}
